rearranging and fixing of TemporalFunctions