@@ -47,7 +47,6 @@ import java.sql.Array;
 import java.sql.Blob;
 import java.sql.SQLException;
 import java.sql.Timestamp;
-import java.text.DecimalFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -63,14 +62,12 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Set;
-import java.util.TimeZone;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.calcite.avatica.util.ByteString;
-import org.apache.calcite.avatica.util.DateTimeUtils;
 import org.apache.calcite.avatica.util.Spaces;
 import org.apache.calcite.linq4j.AbstractEnumerable;
 import org.apache.calcite.linq4j.Enumerable;
@@ -118,20 +115,14 @@ import org.polypheny.db.type.entity.numerical.PolyBigDecimal;
 import org.polypheny.db.type.entity.numerical.PolyDouble;
 import org.polypheny.db.type.entity.numerical.PolyInteger;
 import org.polypheny.db.type.entity.relational.PolyMap;
-import org.polypheny.db.type.entity.temporal.PolyDate;
-import org.polypheny.db.type.entity.temporal.PolyTime;
-import org.polypheny.db.type.entity.temporal.PolyTimestamp;
 import org.polypheny.db.util.BsonUtil;
-import org.polypheny.db.util.NumberUtil;
 import org.polypheny.db.util.Static;
-import org.polypheny.db.util.TimeWithTimeZoneString;
-import org.polypheny.db.util.TimestampWithTimeZoneString;
 
 
 /**
  * Helper methods to implement SQL functions in generated code.
  * <p>
- * Not present: and, or, not (builtin operators are better, because they use lazy evaluation. Implementations do not check
+ * Not present: and, or, not (builtin operators are better, because they use lazy evaluation.) Implementations do not check
  * for null values; the calling code must do that.
  * <p>
  * Many of the functions do not check for null values. This is intentional. If null arguments are possible, the
@@ -143,12 +134,9 @@ public class Functions {
 
     private static final Gson gson = new Gson();
 
-    private static final DecimalFormat DOUBLE_FORMAT = NumberUtil.decimalFormat( "0.0E0" );
-
-    public static final TimeZone LOCAL_TZ = TimeZone.getDefault();
-
     private static final Function1<List<?>, Enumerable<?>> LIST_AS_ENUMERABLE = Linq4j::asEnumerable;
 
+    @SuppressWarnings("unused")
     private static final Function1<Object[], Enumerable<Object[]>> ARRAY_CARTESIAN_PRODUCT =
             lists -> {
                 final List<Enumerator<Object>> enumerators = new ArrayList<>();
@@ -238,6 +226,7 @@ public class Functions {
         }
 
 
+        @SuppressWarnings("unused")
         String toJson() {
             return new Gson().toJson( this );
         }
@@ -299,7 +288,7 @@ public class Functions {
     @SuppressWarnings("unused")
     public static <T> Enumerable<PolyValue[]> streamRight( final DataContext context, final Enumerable<PolyValue[]> baz, final Function0<Enumerable<PolyValue[]>> executorCall, final List<PolyType> polyTypes ) {
         AlgDataTypeFactory factory = new PolyTypeFactoryImpl( AlgDataTypeSystem.DEFAULT );
-        List<AlgDataType> algDataTypes = polyTypes.stream().map( factory::createPolyType ).collect( Collectors.toList() );
+        List<AlgDataType> algDataTypes = polyTypes.stream().map( factory::createPolyType ).toList();
 
         boolean single = polyTypes.size() == 1;
 
@@ -362,7 +351,7 @@ public class Functions {
         for ( PolyValue[] object : control ) {
             validationIndexes.add( object[1].asNumber() );
         }
-        if ( validationIndexes.size() == 0 ) {
+        if ( validationIndexes.isEmpty() ) {
             return Linq4j.asEnumerable( results );
         } else {
             // force rollback
@@ -866,6 +855,7 @@ public class Functions {
     /**
      * Returns whether two objects can both be assigned to a given class.
      */
+    @SuppressWarnings("unused")
     private static boolean allAssignable( Class<Number> clazz, Object o0, Object o1 ) {
         return clazz.isInstance( o0 ) && clazz.isInstance( o1 );
     }
@@ -1153,6 +1143,7 @@ public class Functions {
     /**
      * Helper function for implementing <code>BIT_AND</code>
      */
+    @SuppressWarnings("unused")
     public static long bitAnd( long b0, long b1 ) {
         return b0 & b1;
     }
@@ -1163,6 +1154,7 @@ public class Functions {
     /**
      * Helper function for implementing <code>BIT_OR</code>
      */
+    @SuppressWarnings("unused")
     public static long bitOr( long b0, long b1 ) {
         return b0 | b1;
     }
@@ -1350,6 +1342,7 @@ public class Functions {
     /**
      * SQL <code>ROUND</code> operator applied to double values.
      */
+    @SuppressWarnings("unused")
     public static PolyNumber struncate( PolyNumber b0 ) {
         return struncate( b0, PolyInteger.ZERO );
     }
@@ -1557,6 +1550,7 @@ public class Functions {
     }
 
 
+    @SuppressWarnings("unused")
     public static boolean toBoolean( Object o ) {
         return o instanceof Boolean ? (Boolean) o
                 : o instanceof Number ? toBoolean( (Number) o )
@@ -1567,6 +1561,7 @@ public class Functions {
     // Don't need parseByte etc. - Byte.parseByte is sufficient.
 
 
+    @SuppressWarnings("unused")
     public static byte toByte( Object o ) {
         return o instanceof Byte ? (Byte) o
                 : o instanceof Number ? toByte( (Number) o )
@@ -1579,11 +1574,13 @@ public class Functions {
     }
 
 
+    @SuppressWarnings("unused")
     public static char toChar( String s ) {
         return s.charAt( 0 );
     }
 
 
+    @SuppressWarnings("unused")
     public static Character toCharBoxed( String s ) {
         return s.charAt( 0 );
     }
@@ -1599,61 +1596,12 @@ public class Functions {
     }
 
 
+    @SuppressWarnings("unused")
     public static short toShort( Object o ) {
         return o instanceof Short ? (Short) o
                 : o instanceof Number ? toShort( (Number) o )
                         : o instanceof String ? toShort( (String) o )
                                 : (Short) cannotConvert( o, short.class );
-    }
-
-
-    /**
-     * Converts the Java type used for UDF parameters of SQL DATE type ({@link java.sql.Date}) to internal representation (int).
-     * <p>
-     * Converse of {@link #internalToDate(PolyNumber)}.
-     */
-    public static int toInt( java.util.Date v ) {
-        return toInt( v, LOCAL_TZ );
-    }
-
-
-    public static int toInt( java.util.Date v, TimeZone timeZone ) {
-        return (int) (toLong( v, timeZone )); // DateTimeUtils.MILLIS_PER_DAY);
-    }
-
-
-    @SuppressWarnings("unused")
-    public static Integer toIntOptional( java.util.Date v ) {
-        return v == null ? null : toInt( v );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static Integer toIntOptional( java.util.Date v, TimeZone timeZone ) {
-        return v == null
-                ? null
-                : toInt( v, timeZone );
-    }
-
-
-    public static long dateToLong( Date v ) {
-        return toLong( v, LOCAL_TZ );
-    }
-
-
-    /**
-     * Converts the Java type used for UDF parameters of SQL TIME type ({@link java.sql.Time}) to internal representation (int).
-     * <p>
-     * Converse of {@link #internalToTime(PolyNumber)}.
-     */
-    public static long timeToLong( java.sql.Time v ) {
-        return toLong( v, LOCAL_TZ );//% DateTimeUtils.MILLIS_PER_DAY);
-    }
-
-
-    @SuppressWarnings("unused")
-    public static Long timeToLongOptional( java.sql.Time v ) {
-        return v == null ? null : timeToLong( v );
     }
 
 
@@ -1679,36 +1627,6 @@ public class Functions {
     }
 
 
-    /**
-     * Converts the Java type used for UDF parameters of SQL TIMESTAMP type ({@link java.sql.Timestamp}) to internal representation (long).
-     * <p>
-     * Converse of {@link #internalToTimestamp(PolyNumber)}.
-     */
-    @SuppressWarnings("unused")
-    public static long toLong( Timestamp v ) {
-        return toLong( v, LOCAL_TZ );
-    }
-
-
-    // mainly intended for java.sql.Timestamp but works for other dates also
-    public static long toLong( java.util.Date v, TimeZone timeZone ) {
-        final long time = v.getTime();
-        return time + timeZone.getOffset( time );
-    }
-
-
-    // mainly intended for java.sql.Timestamp but works for other dates also
-    public static Long dateToLongOptional( java.util.Date v ) {
-        return v == null ? null : toLong( v, LOCAL_TZ );
-    }
-
-
-    public static Long toLongOptional( Timestamp v ) {
-        if ( v == null ) {
-            return null;
-        }
-        return toLong( v, LOCAL_TZ );
-    }
 
 
     public static long toLong( String s ) {
@@ -1724,6 +1642,7 @@ public class Functions {
     }
 
 
+    @SuppressWarnings("unused")
     public static long toLong( Object o ) {
         return o instanceof Long ? (Long) o
                 : o instanceof Number ? toLong( (Number) o )
@@ -1742,6 +1661,7 @@ public class Functions {
     }
 
 
+    @SuppressWarnings("unused")
     public static float toFloat( Object o ) {
         return o instanceof Float ? (Float) o
                 : o instanceof Number ? toFloat( (Number) o )
@@ -1760,6 +1680,7 @@ public class Functions {
     }
 
 
+    @SuppressWarnings("unused")
     public static double toDouble( Object o ) {
         return o instanceof Double ? (Double) o
                 : o instanceof Number ? toDouble( (Number) o )
@@ -1789,191 +1710,6 @@ public class Functions {
                 : toBigDecimal( o.toString() );
     }
 
-
-    /**
-     * Converts the internal representation of a SQL DATE (int) to the Java type used for UDF parameters ({@link java.sql.Date}).
-     */
-    @SuppressWarnings("unused")
-    public static java.sql.Date internalToDate( PolyNumber v ) {
-        final long t = v.intValue() * DateTimeUtils.MILLIS_PER_DAY;
-        return new java.sql.Date( t - LOCAL_TZ.getOffset( t ) );
-    }
-
-
-    /**
-     * As {@link #internalToDate(PolyNumber)} but allows nulls.
-     */
-    @SuppressWarnings("unused")
-    public static java.sql.Date internalToDate( Integer v ) {
-        return v == null ? null : internalToDate( v.intValue() );
-    }
-
-
-    /**
-     * Converts the internal representation of a SQL TIME (int) to the Java type used for UDF parameters ({@link java.sql.Time}).
-     */
-    @SuppressWarnings("unused")
-    public static java.sql.Time internalToTime( PolyNumber v ) {
-        return new java.sql.Time( v.intValue() - LOCAL_TZ.getOffset( v.intValue() ) );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static java.sql.Time internalToTime( Integer v ) {
-        return v == null ? null : internalToTime( v.intValue() );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyTime toTimeWithLocalTimeZone( PolyString v ) {
-        return PolyTime.of( v == null ? null : new TimeWithTimeZoneString( v.value )
-                .withTimeZone( DateTimeUtils.UTC_ZONE )
-                .getLocalTimeString()
-                .getMillisOfDay() );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyTime toTimeWithLocalTimeZone( PolyString v, TimeZone timeZone ) {
-        return PolyTime.of( v == null ? null : new TimeWithTimeZoneString( v.value + " " + timeZone.getID() )
-                .withTimeZone( DateTimeUtils.UTC_ZONE )
-                .getLocalTimeString()
-                .getMillisOfDay() );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyTime timeWithLocalTimeZoneToTime( PolyNumber v, TimeZone timeZone ) {
-        return PolyTime.of( TimeWithTimeZoneString.fromMillisOfDay( v.intValue() )
-                .withTimeZone( timeZone )
-                .getLocalTimeString()
-                .getMillisOfDay() );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyDate dateStringToUnixDate( PolyString v ) {
-        return PolyDate.ofDays( DateTimeUtils.dateStringToUnixDate( v.value ) );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyDate timeStringToUnixDate( PolyString v ) {
-        return PolyDate.ofDays( DateTimeUtils.timeStringToUnixDate( v.value ) );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyDate timestampStringToUnixDate( PolyString v ) {
-        return PolyDate.ofDays( (int) DateTimeUtils.timestampStringToUnixDate( v.value ) );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyTime timeWithLocalTimeZoneToTimestamp( PolyString date, PolyNumber v, TimeZone timeZone ) {
-        final TimeWithTimeZoneString tTZ = TimeWithTimeZoneString.fromMillisOfDay( v.intValue() )
-                .withTimeZone( DateTimeUtils.UTC_ZONE );
-        return PolyTime.of( new TimestampWithTimeZoneString( date.value + " " + tTZ.toString() )
-                .withTimeZone( timeZone )
-                .getLocalTimestampString()
-                .getMillisSinceEpoch() - LOCAL_TZ.getRawOffset() );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyTimestamp timeWithLocalTimeZoneToTimestampWithLocalTimeZone( PolyString date, PolyNumber v ) {
-        final TimeWithTimeZoneString tTZ = TimeWithTimeZoneString.fromMillisOfDay( v.intValue() )
-                .withTimeZone( DateTimeUtils.UTC_ZONE );
-        return PolyTimestamp.of( new TimestampWithTimeZoneString( date.value + " " + tTZ.toString() )
-                .getLocalTimestampString()
-                .getMillisSinceEpoch() - LOCAL_TZ.getRawOffset() );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyString timeWithLocalTimeZoneToString( PolyNumber v, TimeZone timeZone ) {
-        return PolyString.of( TimeWithTimeZoneString.fromMillisOfDay( v.intValue() )
-                .withTimeZone( timeZone )
-                .toString() );
-    }
-
-
-    /**
-     * Converts the internal representation of a SQL TIMESTAMP (long) to the Java type used for UDF parameters ({@link java.sql.Timestamp}).
-     */
-    @SuppressWarnings("unused")
-    public static java.sql.Timestamp internalToTimestamp( PolyNumber v ) {
-        return new java.sql.Timestamp( v.longValue() - LOCAL_TZ.getOffset( v.longValue() ) );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static java.sql.Timestamp internalToTimestamp( Long v ) {
-        return v == null ? null : internalToTimestamp( v );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyNumber timestampWithLocalTimeZoneToDate( PolyNumber v, TimeZone timeZone ) {
-        return PolyDate.ofDays( TimestampWithTimeZoneString.fromMillisSinceEpoch( v.longValue() )
-                .withTimeZone( timeZone )
-                .getLocalDateString()
-                .getDaysSinceEpoch() );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyTime timestampWithLocalTimeZoneToTime( PolyNumber v, TimeZone timeZone ) {
-        return PolyTime.of( TimestampWithTimeZoneString.fromMillisSinceEpoch( v.longValue() )
-                .withTimeZone( timeZone )
-                .getLocalTimeString()
-                .getMillisOfDay() );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyTimestamp timestampWithLocalTimeZoneToTimestamp( PolyNumber v, TimeZone timeZone ) {
-        return PolyTimestamp.of( TimestampWithTimeZoneString.fromMillisSinceEpoch( v.longValue() )
-                .withTimeZone( timeZone )
-                .getLocalTimestampString()
-                .getMillisSinceEpoch() - LOCAL_TZ.getRawOffset() );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyString timestampWithLocalTimeZoneToString( PolyNumber v, TimeZone timeZone ) {
-        return PolyString.of( TimestampWithTimeZoneString.fromMillisSinceEpoch( v.longValue() )
-                .withTimeZone( timeZone )
-                .toString() );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyTime timestampWithLocalTimeZoneToTimeWithLocalTimeZone( PolyNumber v ) {
-        return PolyTime.of( TimestampWithTimeZoneString.fromMillisSinceEpoch( v.longValue() )
-                .getLocalTimeString()
-                .getMillisOfDay() );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyTimestamp toTimestampWithLocalTimeZone( PolyString v ) {
-        return PolyTimestamp.of( v == null ? null : new TimestampWithTimeZoneString( v.value )
-                .withTimeZone( DateTimeUtils.UTC_ZONE )
-                .getLocalTimestampString()
-                .getMillisSinceEpoch() - LOCAL_TZ.getRawOffset() );
-    }
-
-
-    @SuppressWarnings("unused")
-    public static PolyTimestamp toTimestampWithLocalTimeZone( PolyString v, TimeZone timeZone ) {
-        return PolyTimestamp.of( v == null ? null : new TimestampWithTimeZoneString( v.value + " " + timeZone.getID() )
-                .withTimeZone( DateTimeUtils.UTC_ZONE )
-                .getLocalTimestampString()
-                .getMillisSinceEpoch() - LOCAL_TZ.getRawOffset() );
-    }
-
-    // Don't need shortValueOf etc. - Short.valueOf is sufficient.
 
 
     /**
@@ -2136,73 +1872,6 @@ public class Functions {
             remainder += x;
         }
         return v - remainder;
-    }
-
-
-    /**
-     * SQL {@code CURRENT_TIMESTAMP} function.
-     */
-    @NonDeterministic
-    @SuppressWarnings("unused")
-    public static PolyTimestamp currentTimestamp( DataContext root ) {
-        // Cast required for JDK 1.6.
-        return PolyTimestamp.of( (long) DataContext.Variable.CURRENT_TIMESTAMP.get( root ) );
-    }
-
-
-    /**
-     * SQL {@code CURRENT_TIME} function.
-     */
-    @SuppressWarnings("unused")
-    @NonDeterministic
-    public static PolyTime currentTime( DataContext root ) {
-        int time = (int) (currentTimestamp( root ).longValue() % DateTimeUtils.MILLIS_PER_DAY);
-        if ( time < 0 ) {
-            time += (int) DateTimeUtils.MILLIS_PER_DAY;
-        }
-        return PolyTime.of( time );
-    }
-
-
-    /**
-     * SQL {@code CURRENT_DATE} function.
-     */
-    @SuppressWarnings("unused")
-    @NonDeterministic
-    public static PolyDate currentDate( DataContext root ) {
-        final long timestamp = currentTimestamp( root ).longValue();
-        int date = (int) (timestamp / DateTimeUtils.MILLIS_PER_DAY);
-        final int time = (int) (timestamp % DateTimeUtils.MILLIS_PER_DAY);
-        if ( time < 0 ) {
-            --date;
-        }
-        return PolyDate.of( date );
-    }
-
-
-    /**
-     * SQL {@code LOCAL_TIMESTAMP} function.
-     */
-    @NonDeterministic
-    public static long localTimestamp( DataContext root ) {
-        // Cast required for JDK 1.6.
-        return DataContext.Variable.LOCAL_TIMESTAMP.get( root );
-    }
-
-
-    /**
-     * SQL {@code LOCAL_TIME} function.
-     */
-    @SuppressWarnings("unused")
-    @NonDeterministic
-    public static PolyTime localTime( DataContext root ) {
-        return PolyTime.of( (int) (localTimestamp( root ) % DateTimeUtils.MILLIS_PER_DAY) );
-    }
-
-
-    @NonDeterministic
-    public static TimeZone timeZone( DataContext root ) {
-        return DataContext.Variable.TIME_ZONE.get( root );
     }
 
 
@@ -2567,6 +2236,7 @@ public class Functions {
     /**
      * Support the SUBMULTISET OF function.
      */
+    @SuppressWarnings("unused")
     public static boolean submultisetOf( Collection<?> possibleSubMultiset, Collection<?> multiset ) {
         if ( possibleSubMultiset.size() > multiset.size() ) {
             return false;
@@ -2684,17 +2354,18 @@ public class Functions {
      * {@link JavaRowFormat}.
      */
     @Experimental
+    @SuppressWarnings("unused")
     public static Object structAccess( Object structObject, int index, String fieldName ) {
         if ( structObject == null ) {
             return null;
         }
 
-        if ( structObject instanceof Object[] ) {
-            return ((Object[]) structObject)[index];
-        } else if ( structObject instanceof List ) {
-            return ((List<?>) structObject).get( index );
-        } else if ( structObject instanceof Row ) {
-            return ((Row) structObject).getObject( index );
+        if ( structObject instanceof Object[] object ) {
+            return object[index];
+        } else if ( structObject instanceof List<?> list ) {
+            return list.get( index );
+        } else if ( structObject instanceof Row<?> row ) {
+            return row.getObject( index );
         } else {
             Class<?> beanClass = structObject.getClass();
             try {
@@ -3046,11 +2717,13 @@ public class Functions {
     }
 
 
+    @SuppressWarnings("unused")
     public static List<?> deserializeList( String parsed ) {
         return gson.fromJson( parsed, List.class );
     }
 
 
+    @SuppressWarnings("unused")
     public static PolyDictionary deserializeDirectory( String parsed ) {
         return gson.fromJson( parsed, PolyDictionary.class );
     }
